; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/bank/extr_bank.c_bank_get_bank_ledger_and_thread_group.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/bank/extr_bank.c_bank_get_bank_ledger_and_thread_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread_group = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bank_get_bank_ledger_and_thread_group(i32 %0, i32* %1, %struct.thread_group** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.thread_group**, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.thread_group*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store %struct.thread_group** %2, %struct.thread_group*** %6, align 8
  store %struct.thread_group* null, %struct.thread_group** %8, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @bank_get_voucher_bank_account(i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @bank_get_bank_account_ledger(i32 %11)
  %13 = load i32*, i32** %5, align 8
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call %struct.thread_group* @bank_get_bank_account_thread_group(i32 %14)
  store %struct.thread_group* %15, %struct.thread_group** %8, align 8
  %16 = load %struct.thread_group*, %struct.thread_group** %8, align 8
  %17 = call i32 (...) @current_task()
  %18 = load i32, i32* @FALSE, align 4
  %19 = call i32 @get_bank_task_context(i32 %17, i32 %18)
  %20 = call %struct.thread_group* @bank_get_bank_task_thread_group(i32 %19)
  %21 = icmp eq %struct.thread_group* %16, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %3
  store %struct.thread_group* null, %struct.thread_group** %8, align 8
  br label %23

23:                                               ; preds = %22, %3
  %24 = load %struct.thread_group*, %struct.thread_group** %8, align 8
  %25 = load %struct.thread_group**, %struct.thread_group*** %6, align 8
  store %struct.thread_group* %24, %struct.thread_group** %25, align 8
  %26 = load i32, i32* @KERN_SUCCESS, align 4
  ret i32 %26
}

declare dso_local i32 @bank_get_voucher_bank_account(i32) #1

declare dso_local i32 @bank_get_bank_account_ledger(i32) #1

declare dso_local %struct.thread_group* @bank_get_bank_account_thread_group(i32) #1

declare dso_local %struct.thread_group* @bank_get_bank_task_thread_group(i32) #1

declare dso_local i32 @get_bank_task_context(i32, i32) #1

declare dso_local i32 @current_task(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
